# phrase-splicer

./: README.md  requirements.txt  setup.cfg
src/phrase_splicer/: __init__.py  constants.py  translator.py  utils.py
src/phrase_splicer/models/: diff.py  item.py  timestamp.py  timestamp_range.py  word.py
tests/: test_diff.py
