[metadata]
name = phrase-splicer
version = 0.0.3
description =
author = Salina Team
# license = MIT
# license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	# Programming Language :: Python :: 3.6
	# Programming Language :: Python :: 3.7
	# Programming Language :: Python :: 3.8
	# Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.12

[options]
install_requires =
	pykakasi==2.*
	syllables==1.*
	uroman==1.*
	fun-things==0.48.*
python_requires = >=3.6
package_dir = 
	=src
zip_safe = no
